--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
   "require": {
-    "dwsvad/speaker":"1.0.0"
+    "dwsvad/speaker": "dev-master"
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/dwsvad/speaker"
+    }
+  ],
+  "autoload":{
+    "psr-4": {
+      "HelloWorld\\":"src/"
+    }
   }
 }
